new processor implementation

--- a/knapsack/knapsack/knapsack.csproj
+++ b/knapsack/knapsack/knapsack.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="KnapsackProcessor.cs" />
+    <Compile Include="KP.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XItem.cs" />
